# makepnd

./: CMakeLists.txt  README.md
etc/: makepnd.conf.in
recipes/bash/: PNDBUILD
recipes/libarchive/: PNDBUILD
recipes/makepnd/: PNDBUILD
recipes/milkyhelper/: PNDBUILD  milky.sh  startup.conf
recipes/pndmanager/: PNDBUILD
recipes/scons/: PNDBUILD
recipes/xz/: PNDBUILD
share/: pndcorelibs  pndlibs
src/: makepnd.in
